--- a/primera-entrega/pom.xml
+++ b/primera-entrega/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cup</groupId>
-    <artifactId>tp-uno</artifactId>
+    <artifactId>primera-entrega</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>tp-uno</name>
