--- a/segunda-entrega/pom.xml
+++ b/segunda-entrega/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cup</groupId>
-    <artifactId>primera-entrega</artifactId>
+    <artifactId>segunda-entrega</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>tp-uno</name>
